<resources>
    <string name="app_name">中华艺术馆</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="app_exit_tips">再按一次退出程序</string>

    <!--  网络请求  -->
    <string name="http_error_net_disable">当前网络不可用</string>
    <string name="http_error_service">服务请求异常</string>
    <string name="http_error_data">数据解析失败</string>
    <string name="http_error_data_retry">请检查网络后点击重新加载</string>


    <!-- BaseAdapter上拉加载更多的状态 -->
    <string name="adapter_loading">加载中...</string>
    <string name="adapter_load_complete">点击加载更多</string>
    <string name="adapter_load_failed">加载失败</string>
    <string name="adapter_load_end">- 已经到底啦 -</string>
    <string name="adapter_pull_refresh_fail">下拉刷新失败</string>
    <string name="adapter_pull_refresh_empty">暂无内容</string>

    <!-- SwipeRecyclerView上拉加载更多的状态 -->
    <string name="recyclerview_loading">正在努力加载，请稍后</string>
    <string name="recyclerview_load_empty">暂时没有数据</string>
    <string name="recyclerview_load_end">没有更多数据啦</string>
    <string name="recyclerview_load_complete">点我加载更多</string>
    <string name="recyclerview_load_fail">加载失败啦</string>


    <string name="main_tab_home">首页</string>
    <string name="main_tab_dictionary">图典</string>
    <string name="main_tab_mine">我的</string>
    <string name="home_search_hint">作品、艺术家、分类、关键字</string>
    <string name="search_text">搜索</string>
    <string name="works_type_hot">热门</string>
    <string name="works_type_new">新上</string>

    <string name="condition_year">年代</string>
    <string name="condition_theme">题材</string>
    <string name="condition_size">尺寸</string>
    <string name="condition_screen">筛选</string>

    <string name="app_reset">重置</string>
    <string name="app_cancel">取消</string>
    <string name="app_require">确定</string>
    <string name="app_copy">复制</string>

    <string name="app_login_in">登录 ></string>
    <string name="app_login_get_vip">登录后可同步VIP特权</string>
    <string name="vip_join">立即开通</string>
    <string name="vip_continue">立即续费</string>
    <string name="app_login_out">退出登录</string>

    <string name="mine_dictionary_list">我的图单</string>
    <string name="mine_collect">我的收藏</string>
    <string name="mine_setting">设置</string>
    <string name="mine_contact">联系客服</string>

    <string name="app_privacy">隐私政策</string>
    <string name="app_agreement">用户协议</string>
    <string name="account_cancellation">账号注销</string>
    <string name="collect_personal_information">收集个人信息说明</string>
    <string name="sdk_information">第三方服务列表</string>
    <string name="write_off_tips">重要提醒</string>
    <string name="write_off">您提交的注销申请生效前，我们将进行以下验证，以保障您的账号、财产安全：\n\n 1、账号处于安全状态\n 账号没有被盗，被封等风险 。\n\n 2、会员权益 \n未开通会员或会员已到期。</string>

    <string name="my_member">我的会员</string>
    <string name="vip_agreement">会员服务协议</string>

    <string name="vip_more_tag">点击开通超级会员，查看更多标签</string>
    <string name="vip_more_image">点击开通超级会员，查看更多切图</string>

</resources>