<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_EFF1F5"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.gsq.iart.app.weight.CommonTitleLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:title_string="@string/mine_setting" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_16"
        app:layout_constraintTop_toBottomOf="@+id/title_layout"
        android:background="@drawable/bg_white_conner_4"
        android:orientation="vertical">

        <com.gsq.iart.app.weight.CommonItemLayout
            android:id="@+id/agreement_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:item_title="@string/app_agreement"
            app:item_divider_visible="true"
            app:item_right_icon_visible="true" />

        <com.gsq.iart.app.weight.CommonItemLayout
            android:id="@+id/privacy_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:item_title="@string/app_privacy"
            app:item_divider_visible="true"
            app:item_right_icon_visible="true" />

        <com.gsq.iart.app.weight.CommonItemLayout
            android:id="@+id/personal_information_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:item_title="@string/collect_personal_information"
            app:item_divider_visible="true"
            app:item_right_icon_visible="true" />

        <com.gsq.iart.app.weight.CommonItemLayout
            android:id="@+id/sdk_information_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:item_title="@string/sdk_information"
            app:item_divider_visible="true"
            app:item_right_icon_visible="true" />

        <com.gsq.iart.app.weight.CommonItemLayout
            android:id="@+id/cancellation_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:item_title="@string/account_cancellation"
            app:item_divider_visible="false"
            app:item_right_icon_visible="true" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_out_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:text="@string/app_login_out"
        android:textColor="@color/white"
        android:textSize="@dimen/font_16"
        android:background="@drawable/bg_141414_conner_24"
        android:layout_margin="@dimen/dp_16"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>